# AIDev-Mining-Challenge

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: human_pr_repo_with_shas.parquet  test_df.parquet  test_df_with_file_level_details.parquet
data/github/input/: human_pr_repo.parquet  human_pr_repo_with_shas_part_1.parquet
inference/: README.md  cal_bert_score.py  gen_commit_message.py  gen_pr_description_bart.py
notebooks/: RQ1.ipynb  RQ2.ipynb  explore_data.ipynb  github_apis.ipynb  load_check_data.ipynb
processing/: build_human_pr_commit_details_df.py  download_human_pr_commits_detail.py  download_snapshot_repo.py  extract_code_from_patch.py  extract_data.py  extract_funcs_classes_name.py  fetch_commit_details_async.py  fetch_human_sha.py  get_sha_by_pr_id.py  parse_funcs_classes.py  tree_sitter_code_parsing.py
