[project]
name = "aidev-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "fsspec>=2025.9.0",
    "huggingface-hub>=1.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tree-sitter==0.20.4",
    "tree-sitter-languages==1.10.2",
]
