[project]
name = "aidev-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastparquet>=2024.11.0",
    "fsspec>=2025.9.0",
    "hf-xet>=1.2.0",
    "httpx<0.28.0",
    "huggingface-hub==0.25.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "tokenizers==0.20.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers==4.45.2",
    "tree-sitter==0.20.4",
    "tree-sitter-languages==1.10.2",
]
